Added new NCFX API downloader

--- a/tcapy_notebooks/populating_databases_for_tcapy.ipynb
+++ b/tcapy_notebooks/populating_databases_for_tcapy.ipynb
@@ -54,9 +54,9 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "windows_tcapy_path = 'e:/Remote/tcapy/' # Windows platform\n",
+    "windows_tcapy_path = 'e:/cuemacro/tcapy/' # Windows platform\n",
     "linux_tcapy_path = '/home/tcapyuser/cuemacro/tcapy' # Linux platform\n",
-    "local_test_data_path = \"e:/Remote/tcapy/tests_harness_data/\" # Windows platform\n",
+    "local_test_data_path = \"e:/cuemacro/tcapy/tests_harness_data/\" # Windows platform\n",
     "remote_test_data_path = '/home/tcapyuser/cuemacro/tcapy/tests_harness_data/' # WSL drive\n",
     "\n",
     "# For dumping market data files\n",
@@ -65,7 +65,7 @@
     "# Make sure whatever paths you add exist!\n",
     "csv_folder = '\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\'\n",
     "temp_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\temp\\\\\"\n",
-    "temp_large_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu/home\\\\tcapyuser\\\\csv_dump\\\\large\\\\\"\n",
+    "temp_large_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\large\\\\\"\n",
     "\n",
     "# Assuming the front end is on Windows\n",
     "sys.path.insert(0, windows_tcapy_path)\n",
