Added new benchmarks (and notebook) and Python dependencies

--- a/tcapy_notebooks/introducing_tcapy.ipynb
+++ b/tcapy_notebooks/introducing_tcapy.ipynb
@@ -145,7 +145,9 @@
     "Once you've decided which market data to use, you can calculate several benchmarks, which are below. Some benchmarks like TWAP are only appropriate for orders, which have a start and finish time. The abstract class `Benchmark` in tcapy can be extended to create your own customised benchmarks.\n",
     "* Mid price (`BenchmarkMid`)\n",
     "* TWAP (`BenchmarkTWAP`)\n",
-    "* VWAP (`BenchmarkVWAP`)"
+    "* VWAP (`BenchmarkVWAP`)\n",
+    "\n",
+    "In [Additional benchmarks and metrics]()"
    ]
   },
   {
@@ -308,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our first step is to add the tcapy library to our `PYTHONPATH`. You may need to change these lines. Note, that in our setup, we are running the Jupyter notebook on Windows, and the backend Celery workers on Linux. If you are running everything in the same environment, the paths are likely to be same."
+    "Our first step is to add the tcapy library to our `PYTHONPATH`. You may need to change these lines. Note, that in our setup, we are running the Jupyter notebook on Windows, and the backend Celery workers on Linux. If you are running everything in the same environment, the paths are likely to be same. We'll also define some paths for the test data we'll use for trade/orders."
    ]
   },
   {
