Added benchmark market analysis

--- a/tcapy_notebooks/additional_benchmarks_metrics_for_tcapy.ipynb
+++ b/tcapy_notebooks/additional_benchmarks_metrics_for_tcapy.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "## Benchmarks\n",
     "\n",
-    "Here we'll go through some of the benchmarks available in tcapy, which can be used for trades/orders (although some are more appropriate for orders). The abstract class `Benchmark` in tcapy can be extended to create your own customised benchmarks. The most common one is for the mid price (`BenchmarkMarketMid`). However, there are many others including the below.\n",
+    "Here we'll go through some of the benchmarks available in tcapy, which can be used for trades/orders (although some are more appropriate for orders). The abstract class `Benchmark` in tcapy can be extended to create your own customised benchmarks. Some which extend `BenchmarkMarket` are calculated purely on market data to provide more granularity over the market. However, there are many which extend `BenchmarkTrade` which can be used to calculate specific benchmarks for trades/orders.\n",
     "\n",
     "* Arrival price (`BenchmarkArrival`) - \n",
     "    * arrival price at start of order/trade fill\n",
