--- a/tcapy_notebooks/compliance_tca_calculations.ipynb
+++ b/tcapy_notebooks/compliance_tca_calculations.ipynb
@@ -280,7 +280,7 @@
    "outputs": [],
    "source": [
     "# Display a table of all the anomalous trades by slippage (ie. outside bid/ask)\n",
-    "table_results_form = TableResultsForm(trade_order_list=['trade_df'],\n",
+    "table_results_form = TableResultsForm(market_trade_order_list=['trade_df'],\n",
     "    metric_name='slippage',\n",
     "                                      \n",
     "    # Order by the worst slippage\n",
@@ -315,7 +315,7 @@
    "outputs": [],
    "source": [
     " # Get the total notional executed by broker (in reporting currency)\n",
-    "bar_results_form_notional = BarResultsForm(trade_order_list=['trade_df'],  # Trade\n",
+    "bar_results_form_notional = BarResultsForm(market_trade_order_list=['trade_df'],  # Trade\n",
     "    # Aggregate by broker name\n",
     "    aggregate_by_field='broker_id',  \n",
     "                                                \n",
@@ -351,7 +351,7 @@
    "outputs": [],
    "source": [
     "# Get average slippage per broker (weighted by notional)\n",
-    "bar_results_form_slippage = BarResultsForm(trade_order_list=['trade_df'],\n",
+    "bar_results_form_slippage = BarResultsForm(market_trade_order_list=['trade_df'],\n",
     "                                           \n",
     "    # Aggregate the trades by broker_id\n",
     "    aggregate_by_field='broker_id',\n",
