--- a/tcapy_notebooks/introducing_tcapy.ipynb
+++ b/tcapy_notebooks/introducing_tcapy.ipynb
@@ -2450,7 +2450,7 @@
    "source": [
     "Here we create a `TCARequest` for the same dataset. This time, however, we also calculate the `MetricTransientMarketImpact`, which we've defined as the 5 second move from a trade or start of an order. We also want to calculate the distribution of the slippage by side (ie. buy/sell) with `DistResultsForm` and to calculate the average slippage (weighted by the executed notional) with `BarResultForm`. Note, we've used `scalar` parameters of `10000.0` to convert to basis point to ease understanding.\n",
     "\n",
-    "All these `Metric` and `ResultsForm` calculations will be calculated on both trades and orders. However, we can specify for it to be calculated only on for example trades, by instantiating the objects using the `trade_order_list` parameter eg. `MetricSlippage(trade_order_list=['trade_df'])`"
+    "All these `Metric` and `ResultsForm` calculations will be calculated on both trades and orders. However, we can specify for it to be calculated only on for example trades, by instantiating the objects using the `market_trade_order_list` parameter eg. `MetricSlippage(market_trade_order_list=['trade_df'])`"
    ]
   },
   {
