Additional Binder links

--- a/tcapy_notebooks/populating_databases_for_tcapy.ipynb
+++ b/tcapy_notebooks/populating_databases_for_tcapy.ipynb
@@ -31,7 +31,7 @@
     "Whilst our focus here is on MySQL and MongoDB, note that tcapy supports several databases, via adapters:\n",
     "\n",
     "* trade/order data - Microsoft SQL Server, MySQL, SQLite\n",
-    "* market data - Arctic/MongoDB, PyStore, InfluxDB and KDB\n",
+    "* market data - Arctic/MongoDB, PyStore, InfluxDB and kdb+/q\n",
     "\n",
     "You can also read trade/order and market data from flat files (CSV, Parquet or H5) or direct from external sources. However, we would strongly recommend, in particular for your market data, to download from your external source and then dump in your database. For trade/order data, it is also more convenient to use a database, rather than using CSVs.\n",
     "\n",
@@ -54,10 +54,10 @@
     "import sys\n",
     "import os\n",
     "\n",
-    "windows_tcapy_path = 'e:/cuemacro/tcapy/' # Windows platform\n",
+    "windows_tcapy_path = 'e:/cuemacro/tcapy' # Windows platform\n",
     "linux_tcapy_path = '/home/tcapyuser/cuemacro/tcapy' # Linux platform\n",
-    "local_test_data_path = \"e:/cuemacro/tcapy/tests_harness_data/\" # Windows platform\n",
-    "remote_test_data_path = '/home/tcapyuser/cuemacro/tcapy/tests_harness_data/' # WSL drive\n",
+    "local_test_data_path = '../tests/resources/' # Windows platform\n",
+    "remote_test_data_path = '../tests/resources/' # WSL drive\n",
     "\n",
     "# For dumping market data files\n",
     "# Assuming Windows platform (you might have to change these paths)\n",
