--- a/tcapy_notebooks/real_life_tcapy_case_study.ipynb
+++ b/tcapy_notebooks/real_life_tcapy_case_study.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many of the examples we have shown elsewhere use randomized trade/order data. However, in practice, the output of any TCA using randomized trade data is likely to be quite artificial. In this section, we use a real dataset of trade level data during most of 2017 from Swedbank Robur, a Swedish asset manager from their FX trading desk to run some TCA. We'd like to thank Swedbank Robur for allowing us to publish the results. Whilst, we aren't able to provide the raw data to readers, it nevertheless illustrates some of the steps you'll need to take on your own trading data to normalize it, and in particular how you could approach your TCA. If you'd like us to run similar analysis on your firm's execution data, let us know!"
+    "Many of the examples we have shown elsewhere use randomized trade/order data. However, in practice, the output of any TCA using randomized trade data is likely to be quite artificial. In this section, we use a real dataset of trade level data during most of 2017 from Swedbank Robur, a Swedish asset manager from their FX trading desk to run some TCA. We'd like to thank Swedbank Robur for allowing us to publish the results. Whilst, we aren't able to provide the raw data to readers (hence, you won't be able to recalculate the results on your own machines), it nevertheless illustrates some of the steps you'll need to take on your own trading data to normalize it, and in particular how you could approach your TCA. If you'd like us to run similar analysis on your firm's execution data, let us know!"
    ]
   },
   {
