--- a/tcapy_notebooks/compliance_tca_calculations.ipynb
+++ b/tcapy_notebooks/compliance_tca_calculations.ipynb
@@ -80,8 +80,8 @@
     "\n",
     "windows_tcapy_path = 'e:/cuemacro/tcapy' # Windows platform\n",
     "linux_tcapy_path = '/home/tcapyuser/cuemacro/tcapy' # Linux platform\n",
-    "local_test_data_path = 'e:/cuemacro/tcapy/tests_harness_data/' # Windows platform\n",
-    "remote_test_data_path = '/home/tcapyuser/cuemacro/tcapy/tests_harness_data/' # WSL drive\n",
+    "local_test_data_path = '../tests/resources/' # Windows platform\n",
+    "remote_test_data_path = '../tests/resources/' # WSL drive\n",
     "\n",
     "# Assuming the front end is on Linux\n",
     "sys.path.insert(0, windows_tcapy_path)"
