Updated pio reference

--- a/tcapy_notebooks/introducing_tcapy.ipynb
+++ b/tcapy_notebooks/introducing_tcapy.ipynb
@@ -395,9 +395,9 @@
     "# For interactive plots (but these disappear when we reopen Jupyter)\n",
     "pio.renderers.default = \"notebook\" \n",
     "\n",
-    "# For static plots, need Orca (but might not work properly on WSL)\n",
+    "# For static plots, need Orca (but might not work properly on WSL or Binder)\n",
     "# pio.renderers.default = \"svg\"\n",
-    "pio.renderers.default = \"png\" \n",
+    "# pio.renderers.default = \"png\" \n",
     "\n",
     "import plotly\n",
     "\n",
