--- a/tcapy_notebooks/market_microstructure_with_tcapy.ipynb
+++ b/tcapy_notebooks/market_microstructure_with_tcapy.ipynb
@@ -122,8 +122,8 @@
     "# For interactive plots (but these disappear when we reopen Jupyter)\n",
     "pio.renderers.default = \"notebook\" \n",
     "\n",
-    "# For static plots, need Orca (but might not work properly on WSL)\n",
-    "pio.renderers.default = \"svg\"\n",
+    "# For static plots, need Orca (but might not work properly on WSL or Binder)\n",
+    "# pio.renderers.default = \"svg\"\n",
     "# pio.renderers.default = \"png\" \n",
     "\n",
     "import plotly\n",
