Refactor test folder name

--- a/tcapy_notebooks/market_microstructure_with_tcapy.ipynb
+++ b/tcapy_notebooks/market_microstructure_with_tcapy.ipynb
@@ -52,8 +52,8 @@
     "\n",
     "windows_tcapy_path = 'e:/cuemacro/tcapy' # Windows platform\n",
     "linux_tcapy_path = '/home/tcapyuser/cuemacro/tcapy' # Linux platform\n",
-    "local_test_data_path = '../tests/resources/' # Windows platform\n",
-    "remote_test_data_path = '../tests/resources/' # WSL drive\n",
+    "local_test_data_path = '../test/resources/' # Windows platform\n",
+    "remote_test_data_path = '../test/resources/' # WSL drive\n",
     "\n",
     "# Assuming the front end is on Windows\n",
     "sys.path.insert(0, windows_tcapy_path)"
