--- a/tcapy_notebooks/populating_databases_for_tcapy.ipynb
+++ b/tcapy_notebooks/populating_databases_for_tcapy.ipynb
@@ -56,8 +56,8 @@
     "\n",
     "windows_tcapy_path = 'e:/cuemacro/tcapy' # Windows platform\n",
     "linux_tcapy_path = '/home/tcapyuser/cuemacro/tcapy' # Linux platform\n",
-    "local_test_data_path = '../tests/resources/' # Windows platform\n",
-    "remote_test_data_path = '../tests/resources/' # WSL drive\n",
+    "local_test_data_path = '../test/resources/' # Windows platform\n",
+    "remote_test_data_path = '../test/resources/' # WSL drive\n",
     "\n",
     "# For dumping market data files\n",
     "# Assuming Windows platform (you might have to change these paths)\n",
