Adding more Docker support

--- a/tcapy_notebooks/populating_databases_for_tcapy.ipynb
+++ b/tcapy_notebooks/populating_databases_for_tcapy.ipynb
@@ -63,9 +63,9 @@
     "# Assuming Windows platform (you might have to change these paths)\n",
     "# wsl$ gives us access to the WSL/Ubuntu drive on Windows\n",
     "# Make sure whatever paths you add exist!\n",
-    "csv_folder = '\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\'\n",
-    "temp_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\temp\\\\\"\n",
-    "temp_large_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\csv_dump\\\\large\\\\\"\n",
+    "csv_folder = '\\\\\\\\wsl$\\\\Ubuntu\\\\data\\\\csv_dump\\\\'\n",
+    "temp_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\data\\\\temp\\\\\"\n",
+    "temp_large_data_folder = \"\\\\\\\\wsl$\\\\Ubuntu\\\\data\\\\csv_dump\\\\large\\\\\"\n",
     "\n",
     "# Assuming the front end is on Windows\n",
     "sys.path.insert(0, windows_tcapy_path)\n",
@@ -109,8 +109,8 @@
     "data_vendor_test_harness = 'testharness'\n",
     "\n",
     "# Change paths as appropriate\n",
-    "pystore_path = '/home/tcapyuser/pystore' # Linux\n",
-    "pystore_path = '\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\tcapyuser\\\\pystore' # Windows\n",
+    "pystore_path = '/data/pystore' # Linux\n",
+    "pystore_path = '\\\\\\\\wsl$\\\\Ubuntu\\\\data\\\\pystore' # Windows\n",
     "\n",
     "from tcapy.data.databasesource import DatabaseSourceArctic, DatabaseSourcePyStore\n",
     "\n",
