Make Parquet default binary flat file

--- a/tcapy_notebooks/a_10_minute_view_of_tcapy.ipynb
+++ b/tcapy_notebooks/a_10_minute_view_of_tcapy.ipynb
@@ -163,8 +163,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Anaconda3\\envs\\py37tca\\lib\\site-packages\\arctic\\store\\_pandas_ndarray_store.py:6: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import DataFrame, Series, Panel\n"
+      "/opt/conda/lib/python3.7/site-packages/arctic/store/_pandas_ndarray_store.py:6: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
+      "  from pandas import DataFrame, Series, Panel\n",
+      "WARNING: Could not load OpenGL library.\n"
      ]
     }
    ],
@@ -300,17 +301,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-08-26 14:03:21,519; DEBUG:tcapy.data.databasesource: Downloading 2017-04-25 00:00:00 - 2017-04-28 00:00:00 for EURUSD (databasesource.py:3811)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.41 s\n"
+      "CPU times: user 3.45 s, sys: 384 ms, total: 3.83 s\n",
+      "Wall time: 5.52 s\n"
      ]
     }
    ],
@@ -1128,10 +1123,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-08-26 14:03:26,913; INFO:tcapy.analysis.tcaengine: Init TCAEngine version: pro - Env: desktop_laptop_linux (tcaengine.py:53)\n"
+      "2020-09-14 14:40:35,956 - tcapy.analysis.tcaengine - INFO - Init TCAEngine version: pro - Env: default\n"
      ]
     }
    ],
@@ -1214,50 +1209,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-08-26 14:03:26,937; DEBUG:tcapy.analysis.tcamarkettradeloader: Start loading trade/data/computation (tcamarkettradeloader.py:241)\n",
-      "2020-08-26 14:03:26,940; DEBUG:tcapy.analysis.tcatickerloaderimpl: Get market and trade/order data for EURUSD from 2017-05-05 00:00:00+00:00 - 2017-05-10 00:00:00+00:00 (tcatickerloaderimpl.py:80)\n",
-      "2020-08-26 14:03:26,942; DEBUG:tcapy.data.volatilecache: Attempting to get list from cache: ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] (volatilecache.py:540)\n",
-      "2020-08-26 14:03:28,995; DEBUG:tcapy.data.volatilecache: Attempting to get list from cache: ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] (volatilecache.py:540)\n",
-      "2020-08-26 14:03:28,998; DEBUG:tcapy.data.databasesource: Downloading 2017-05-05 00:00:00 - 2017-05-10 00:00:00 for EURUSD (databasesource.py:3811)\n",
-      "2020-08-26 14:03:37,309; WARNING:tcapy.analysis.algos.benchmark: mid not in market data (benchmark.py:90)\n",
-      "2020-08-26 14:03:37,310; DEBUG:tcapy.data.volatilecache: Attempting to push ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] to cache (volatilecache.py:426)\n",
-      "2020-08-26 14:03:37,409; DEBUG:tcapy.util.deltaizeserialize: Pandas dataframe of size: ----------- 17.08 MB ----------- in 1 chunk(s) (deltaizeserialize.py:221)\n",
-      "2020-08-26 14:03:37,448; DEBUG:tcapy.data.volatilecache: Now pushing ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp_size_5698367_endsizearrow_'] to cache (volatilecache.py:443)\n",
-      "2020-08-26 14:03:37,507; DEBUG:tcapy.data.volatilecache: Pushed ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp_size_5698367_endsizearrow_'] to cache (volatilecache.py:461)\n",
-      "2020-08-26 14:03:37,509; DEBUG:tcapy.data.volatilecache: Attempting to push ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] to cache (volatilecache.py:426)\n",
-      "2020-08-26 14:03:37,602; DEBUG:tcapy.util.deltaizeserialize: Pandas dataframe of size: ----------- 17.08 MB ----------- in 1 chunk(s) (deltaizeserialize.py:221)\n",
-      "2020-08-26 14:03:37,636; DEBUG:tcapy.data.volatilecache: Now pushing ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp_size_5698367_endsizearrow_'] to cache (volatilecache.py:443)\n",
-      "2020-08-26 14:03:37,697; DEBUG:tcapy.data.volatilecache: Pushed ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp_size_5698367_endsizearrow_'] to cache (volatilecache.py:461)\n",
-      "2020-08-26 14:03:37,698; DEBUG:tcapy.analysis.tcatickerloader: Get trade order holder for EURUSD from 2017-05-05 00:00:00+00:00 - 2017-05-10 00:00:00+00:00 (tcatickerloader.py:386)\n",
-      "2020-08-26 14:03:37,733; WARNING:tcapy.data.datafactory: Dataframe empty for ticker USDEUR (datafactory.py:97)\n",
-      "2020-08-26 14:03:37,735; DEBUG:tcapy.data.volatilecache: Attempting to get list from cache: ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] (volatilecache.py:540)\n",
-      "2020-08-26 14:03:37,820; WARNING:tcapy.data.datafactory: Dataframe empty for ticker USDEUR (datafactory.py:97)\n",
-      "2020-08-26 14:03:37,822; DEBUG:tcapy.data.volatilecache: Attempting to get list from cache: ['dukascopy_EURUSD_2017-05-05 00:00:00+00:00_2017-05-10 00:00:00+00:00_market_df_None_comp'] (volatilecache.py:540)\n",
-      "2020-08-26 14:03:37,869; DEBUG:tcapy.analysis.tcatickerloader: Filter the market date by start/finish date (tcatickerloader.py:761)\n",
-      "2020-08-26 14:03:37,876; DEBUG:tcapy.analysis.tcatickerloader: Combine trade/order data (tcatickerloader.py:782)\n",
-      "2020-08-26 14:03:37,884; DEBUG:tcapy.analysis.tcatickerloader: Calculating BenchmarkMarketSpreadToMid for market data (tcatickerloader.py:600)\n",
-      "2020-08-26 14:03:37,908; DEBUG:tcapy.analysis.tcatickerloader: Filter trades by venue (tcatickerloader.py:458)\n",
-      "2020-08-26 14:03:37,910; DEBUG:tcapy.analysis.tcatickerloader: Calculating derived fields and benchmarks (tcatickerloader.py:508)\n",
-      "2020-08-26 14:03:37,911; DEBUG:tcapy.analysis.tcatickerloader: Calculating execution fields (tcatickerloader.py:510)\n",
-      "2020-08-26 14:03:37,920; DEBUG:tcapy.analysis.tcatickerloader: Calculating benchmarks (tcatickerloader.py:536)\n",
-      "2020-08-26 14:03:37,921; DEBUG:tcapy.analysis.tcatickerloader: Calculating BenchmarkArrival for trade_df (tcatickerloader.py:545)\n",
-      "2020-08-26 14:03:37,926; DEBUG:tcapy.analysis.tcatickerloader: Calculating BenchmarkArrival for order_df (tcatickerloader.py:545)\n",
-      "2020-08-26 14:03:37,931; DEBUG:tcapy.analysis.tcatickerloader: Calculating metrics (tcatickerloader.py:554)\n",
-      "2020-08-26 14:03:37,932; DEBUG:tcapy.analysis.tcatickerloader: Calculating MetricSlippage for trade_df (tcatickerloader.py:560)\n",
-      "2020-08-26 14:03:37,948; DEBUG:tcapy.analysis.tcatickerloader: Calculating MetricSlippage for order_df (tcatickerloader.py:560)\n",
-      "2020-08-26 14:03:37,965; DEBUG:tcapy.analysis.tcatickerloader: Completed derived field calculations for EURUSD (tcatickerloader.py:568)\n",
-      "2020-08-26 14:03:37,966; DEBUG:tcapy.analysis.tcatickerloaderimpl: Generating downsampled market data for potentional display (tcatickerloaderimpl.py:275)\n",
-      "2020-08-26 14:03:37,987; DEBUG:tcapy.analysis.tcatickerloaderimpl: About to join (tcatickerloaderimpl.py:340)\n",
-      "2020-08-26 14:03:37,992; DEBUG:tcapy.analysis.tcatickerloaderimpl: Finished joining (tcatickerloaderimpl.py:356)\n",
-      "2020-08-26 14:03:37,994; DEBUG:tcapy.analysis.tcatickerloaderimpl: About to join (tcatickerloaderimpl.py:340)\n",
-      "2020-08-26 14:03:37,997; DEBUG:tcapy.analysis.tcatickerloaderimpl: Finished joining (tcatickerloaderimpl.py:356)\n",
-      "2020-08-26 14:03:38,037; DEBUG:tcapy.analysis.tcamarkettradeloader: Finished loading data and calculating metrics on individual _tickers (tcamarkettradeloader.py:248)\n",
-      "2020-08-26 14:03:38,039; DEBUG:tcapy.analysis.tcamarkettradeloaderimpl: Constructing results form to summarize analysis... (tcamarkettradeloaderimpl.py:74)\n",
-      "2020-08-26 14:03:38,068; DEBUG:tcapy.analysis.tcamarkettradeloaderimpl: Now join table results... (tcamarkettradeloaderimpl.py:122)\n",
-      "2020-08-26 14:03:38,069; DEBUG:tcapy.analysis.tcamarkettradeloaderimpl: Finished calculating results form and join table results! (tcamarkettradeloaderimpl.py:135)\n"
+      "2020-09-14 14:40:46,356 - tcapy.analysis.algos.benchmark - WARNING - mid not in market data\n",
+      "2020-09-14 14:40:46,815 - tcapy.data.datafactory - WARNING - Dataframe empty for ticker USDEUR\n",
+      "2020-09-14 14:40:46,890 - tcapy.data.datafactory - WARNING - Dataframe empty for ticker USDEUR\n"
      ]
     }
    ],
@@ -2549,7 +2506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
