Added extra error handling for NCFX

--- a/tcapy_notebooks/a_10_minute_view_of_tcapy.ipynb
+++ b/tcapy_notebooks/a_10_minute_view_of_tcapy.ipynb
@@ -124,8 +124,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:27:49.841936Z",
-     "start_time": "2020-09-14T15:27:49.824936Z"
+     "end_time": "2021-02-01T16:44:40.767061Z",
+     "start_time": "2021-02-01T16:44:40.746057Z"
     }
    },
    "outputs": [],
@@ -151,23 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:27:55.094180Z",
-     "start_time": "2020-09-14T15:27:49.843938Z"
+     "end_time": "2021-02-01T18:46:29.594569Z",
+     "start_time": "2021-02-01T18:46:29.573570Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\envs\\py37tca\\lib\\site-packages\\arctic\\store\\_pandas_ndarray_store.py:6: FutureWarning: The Panel class is removed from pandas. Accessing it from the top-level namespace will also be removed in the next version\n",
-      "  from pandas import DataFrame, Series, Panel\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
     "\n",
@@ -179,7 +170,7 @@
     "\n",
     "# To access trade and market data\n",
     "from tcapy.data.databasesource import DatabaseSourceCSVBinary, \\\n",
-    "    DatabaseSourceDataFrame, DatabaseSourceDukascopy\n",
+    "    DatabaseSourceDataFrame, DatabaseSourceDukascopy, DatabaseSourceNCFX\n",
     "\n",
     "# Import all the metrics and benchmarks we'll use\n",
     "from tcapy.analysis.algos.benchmark import BenchmarkArrival, BenchmarkMarketSpreadToMid\n",
@@ -236,11 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:27:55.109181Z",
-     "start_time": "2020-09-14T15:27:55.096185Z"
+     "end_time": "2021-02-01T18:46:30.344991Z",
+     "start_time": "2021-02-01T18:46:30.336990Z"
     }
    },
    "outputs": [],
@@ -265,11 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:27:55.124180Z",
-     "start_time": "2020-09-14T15:27:55.111181Z"
+     "end_time": "2021-02-01T18:46:31.651900Z",
+     "start_time": "2021-02-01T18:46:31.641900Z"
     }
    },
    "outputs": [],
@@ -291,27 +282,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:28:00.540053Z",
-     "start_time": "2020-09-14T15:27:55.126182Z"
+     "end_time": "2021-02-01T18:46:40.893825Z",
+     "start_time": "2021-02-01T18:46:32.631817Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-09-14 16:27:55,280; DEBUG:tcapy.data.databasesource: Downloading 2017-04-25 00:00:00 - 2017-04-28 00:00:00 for EURUSD (databasesource.py:3816)\n",
-      "2020-09-14 16:27:55,306; DEBUG:asyncio: Using selector: SelectSelector (selector_events.py:58)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.41 s\n"
+      "Wall time: 8.25 s\n"
      ]
     }
    ],
@@ -333,11 +316,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T15:28:00.555053Z",
-     "start_time": "2020-09-14T15:28:00.542203Z"
+     "end_time": "2021-02-01T18:46:42.849305Z",
+     "start_time": "2021-02-01T18:46:42.828306Z"
     }
    },
    "outputs": [
@@ -465,7 +448,7 @@
        "2017-04-25 00:00:08.717000+00:00  1.08656  1.08660  1.086580  EURUSD"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2835,7 +2818,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   },
   "toc": {
    "base_numbering": 1,
